# dfinity_delivery_nov

./: Cargo.toml  README.md  deploy.sh  dfx.json  dss.md  package-lock.json  package.json  tsconfig.json  vite.config.ts  webpack.config.js
src/aibe/: Cargo.toml
src/aibe/src/: bigint_ext.rs  define.rs  errors.rs  lib.rs  polynomial.rs  rand_utils.rs  threshold.rs  utils.rs
src/aibe/tests/: test_zk_withdraw.rs
src/bn/src/: lib.rs
src/faceless_dfinity_backend/: Cargo.toml  faceless_dfinity_backend.did
src/faceless_dfinity_backend/src/: exchange.rs  ibe_wrapper.rs  lib.rs  types.rs  utils.rs
src/faceless_dfinity_frontend/src/: index.html  index.js
src/faceless_frontend/: index.html  package.json  tsconfig.json  vite.config.ts
src/faceless_frontend/faceless-wasm-wrapper/: Cargo.toml  LICENSE_MIT
src/faceless_frontend/faceless-wasm-wrapper/src/: lib.rs
src/faceless_frontend/faceless_dfinity_backend_declarations/: faceless_dfinity_backend.did.d.ts  faceless_dfinity_backend.did.js  index.d.ts  index.js
src/faceless_frontend/ledger_declarations/: index.js  ledger.did.js
src/faceless_frontend/src/: Main.vue  main.ts
src/faceless_frontend/src/assets/env/: index.ts  prod.json  stag.json
src/faceless_frontend/src/assets/font/: index.scss
src/faceless_frontend/src/assets/style/: animation.scss  global.scss  reset.scss
src/faceless_frontend/src/assets/style/overrides/: light.json
src/faceless_frontend/src/components/community/: ConfirmTradeAccount.vue  RouteBack.vue  SelectCoin.vue  StatusUpdateButton.vue  imitate.ts  index.ts
src/faceless_frontend/src/components/platform/create/: index.ts
src/faceless_frontend/src/components/platform/create/phone/: index.vue
src/faceless_frontend/src/components/platform/create/phone/process/: EnterCode.vue  EnterPhoneNumber.vue  index.ts
src/faceless_frontend/src/components/transfer/: ReceiverAccount.vue  TradeAmount.vue  TradeHRIPlatform.vue  index.ts
src/faceless_frontend/src/components/wallet/: AccountItem.vue  AccountList.vue  AddHRIPlatform.vue  DepositToken.vue  Login.vue  Register.vue  WithdrawToken.vue  index.ts
src/faceless_frontend/src/plugins/axios/: index.ts  interceptor.ts
src/faceless_frontend/src/plugins/chart/: config.ts  index.ts
src/faceless_frontend/src/plugins/checkpoint/: index.ts
src/faceless_frontend/src/plugins/i18n/: index.ts
src/faceless_frontend/src/plugins/naive/: index.ts
src/faceless_frontend/src/plugins/wallet/config/: index.ts
src/faceless_frontend/src/plugins/wallet/render/: index.vue
src/faceless_frontend/src/plugins/wallet/tidy/: build.ts  index.ts  muster.ts
src/faceless_frontend/src/request/: index.ts
src/faceless_frontend/src/router/: index.ts
src/faceless_frontend/src/store/: index.ts
src/faceless_frontend/src/store/account/: index.ts
src/faceless_frontend/src/store/client/: index.ts
src/faceless_frontend/src/store/config/: index.ts
src/faceless_frontend/src/store/dfinity/: index.ts
src/faceless_frontend/src/store/substrate/: index.ts
src/faceless_frontend/src/store/user/: index.ts
src/faceless_frontend/src/store/wallet/: index.ts
src/faceless_frontend/src/utils/: account.ts  asset.ts  auth.ts  client.ts  command.ts  crypto.ts  explorer.ts  lan.ts  omit.ts  random.ts  registerAccount.ts
src/faceless_frontend/src/views/: app.vue  error.vue  index.vue  transfer.vue  wallet.vue
src/ledger/: ledger.wasm
src/plain_backend/: Cargo.toml  plain_backend.did
src/plain_backend/src/: exchange.rs  lib.rs  types.rs
test_scripts/: deploy.sh  encrypted_transfer.sh  ibe_tests.sh  plain_transfer.sh
